# facepass

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yaml
auth/: CMakeLists.txt  README.md  anti_spoof.h  identify.cc  identify.h  pam.cc
cli/: CMakeLists.txt  add_face.cc  add_face.h  config.cc  config.h  face.cc  face.h  main.cc  pam_conf.cc  pam_conf.h  remove_face.cc  remove_face.h
cli/cmd/: config.cc  config.h  disable.cc  disable.h  enable.cc  enable.h  register.cc  register.h  unregister.cc  unregister.h
docs/: contributing.md  flow.md
face_engine/: CMakeLists.txt  Makefile  build.sh  convert.py  inference.cpp  inference.h  main.cpp  run.sh
face_engine/face_det/: face_det.cpp  face_det.h
face_engine/face_reg/: face_reg.cpp
include/face_detection/: utils.h
lib/config/: CMakeLists.txt  face_config.cc  face_config.h
lib/face_as/: CMakeLists.txt  face_as.cpp  face_as.h  face_reg.cpp  face_reg.h
lib/face_detection/: CMakeLists.txt  face_detection.cc  face_detection.h  utils.cc
lib/face_recognition/: CMakeLists.txt  face_recognition.cc
lib/pam/: .gitignore  CMakeLists.txt  identify.cc  identify.h  pam.cc
pam/: Makefile  identify.cc  identify.cpp  identify.h  main.c  pam.cc  pam.cpp  test.cc
scripts/: postinst
src/: Makefile  README.md  main.cc
test/face_engine/: CMakeLists.txt  Makefile  README.md  build.sh  convert.py  main.cpp  run.sh
test/face_engine/face_det/: utils.cpp
test/pam/: CMakeLists.txt  main.cc
